fixed small overflow problem

--- a/src/app/desktop/shortcut/shortcut.component.scss
+++ b/src/app/desktop/shortcut/shortcut.component.scss
@@ -14,6 +14,7 @@ $startingColor: rgba($color, .3);
   display: inline-block;
   height: ($width * 1.5);
   margin: 2px;
+  overflow: hidden;
   position: absolute;
   user-select: none;
   width: $width;
